[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valyu-search-haystack"
dynamic = ["version"]
description = "Haystack components for integrating Valyu's search and content extraction APIs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["haystack", "valyu", "search", "content-extraction", "rag", "llm"]
authors = [
    { name = "Valyu", email = "support@valyu.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "haystack-ai>=2.0.0",
    "valyu>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Documentation = "https://github.com/valyu-network/valyu-search-haystack#readme"
Issues = "https://github.com/valyu-network/valyu-search-haystack/issues"
Source = "https://github.com/valyu-network/valyu-search-haystack"

[tool.hatch.version]
path = "src/valyu_haystack/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/valyu_haystack"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ["py38"]
line-length = 100

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

